Implement Protected Endpoints (#83)
* user server actions for login, logout, register

* correctly mark registration as a server library

* overwrite fetch globally

* basic api token creation system

* token management

* also patch client fetch with no cookies

* rewrite fetch system to not rely on global overwrites

* form adjustment

* start requiring api tokens

* use async apis for cookies

* add emergency fallback token

* require api key for registration related endpoints

* require key for logout

* require api key for connections

* require key for password reset

* add apikey to docs

* fix incorrect condition in api token validation

* git commit add basic token cases to create user test
